crates/rolldown_utils/tests/ui/pass_harness/fail_construct_raw_output.stderr
error[E0451]: fields `read` and `owned` of struct `RawPassOutput` are private
  --> tests/ui/pass_harness/fail_construct_raw_output.rs:22:24
   |
22 |     Ok(RawPassOutput { read: (), owned: () })
   |                        ^^^^      ^^^^^ private field
   |                        |
   |                        private field
